Test push. Seeing if git is fixed. Updated gap margin in hero text.

--- a/Introduction/intro.css
+++ b/Introduction/intro.css
@@ -91,7 +91,6 @@ html {
 .hero-left {
   display: flex;
   flex-direction: column;
-  gap: 16px;
 }
 
 .brand {
